--- a/data-engineer.html
+++ b/data-engineer.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/keecfjo3d6kzeik6d9ffuaqqne'>Data Engineer - Automotive | Averity</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/vimpelcom/4770762b-fd25-4080-9830-d71f9e627605'>VEON - Big Data Engineer</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-26</p>
@@ -68,7 +72,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/hophr/2e7db708-afa2-428a-9896-6cd03cdfcfc7'>HopHR - Data Engineer - Boston, MA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hophr/2e7db708-afa2-428a-9896-6cd03cdfcfc7'>HopHR - Data Engineer - Boston, MA</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -76,7 +80,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Vichara/743999692283757-data-engineer-python-aws-java'>Vichara Data Engineer - Python AWS Java | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Vichara/743999692283757-data-engineer-python-aws-java'>Vichara Data Engineer - Python AWS Java | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -88,7 +92,7 @@
 <p><span class="badge badge-light">Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Data-Engineer/14854'>Data Engineer - CBS Interactive Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Data-Engineer/14854'>Data Engineer - CBS Interactive Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Truly premium content. At true scale. Only CBSi. CBS Interactive is the premier 
 online content network for information and online operations of CBS Corporation
@@ -193,7 +197,7 @@ with the role for which you're applying??. Please tell us why you selected such 
 <p><span class="badge badge-light">Sydney Sydney Sydney Sydney Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nextgenamerica/jobs/1791548'>Job Application for Data Engineer  at NextGen America</a></h5> 
+<h5><a href='https://boards.greenhouse.io/nextgenamerica/jobs/1791548'>Job Application for Data Engineer  at NextGen America</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -240,7 +244,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 broad disciplines from software, artificial intelligence/machine learning, electronic
 ,?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/saama/job/oBDoafww'>Saama Technologies Inc Careers - Cloud Data Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/saama/job/oBDoafww'>Saama Technologies Inc Careers - Cloud Data Engineer</a></h5> 
 <p><span class="badge badge-light">Campbell California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -248,7 +252,7 @@ broad disciplines from software, artificial intelligence/machine learning, elect
 <p><span class="badge badge-light">Bangalore Bangalore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs-getty.icims.com/jobs/3440/data-engineer/job'>Data Engineer in Los Angeles, California | Careers at The Getty</a></h5> 
+<h5><a href='https://jobs-getty.icims.com/jobs/3440/data-engineer/job'>Data Engineer in Los Angeles, California | Careers at The Getty</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... The Getty is now hiring a Data Engineer in Los Angeles, California. Review all of 
 the job details and apply today!</p>
@@ -285,7 +289,7 @@ was born out of the challenges facing today's marketers. Incubated within?...</p
 <p><span class="badge badge-light">Cambridge, UK</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cloudnc/9528db85-fb01-43a2-9d07-e8c1846015bb'>CloudNC Ltd. - Data Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/cloudnc/9528db85-fb01-43a2-9d07-e8c1846015bb'>CloudNC Ltd. - Data Engineer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -387,7 +391,7 @@ working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/omadahealth/jobs/1786662'>Job Application for Data Engineering Manager at Omada Health</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/omadahealth/jobs/1786662'>Job Application for Data Engineering Manager at Omada Health</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -428,7 +432,7 @@ working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
 <p>4 days ago ... Senior Data Engineering Manager. San Francisco, CA. Data Engineering ? Data 
 Engineering. Full-time. Apply for this job. Quizlet's mission is to help students?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sumup/jobs/4324797002'>Job Application for Senior Data Engineer - Marketing Intelligence at SumUp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4324797002'>Job Application for Senior Data Engineer - Marketing Intelligence at SumUp</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -436,7 +440,7 @@ Engineering. Full-time. Apply for this job. Quizlet's mission is to help student
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/meilleursagents/1c01fcc1-6182-417e-a816-efac0b560bb3'>MeilleursAgents - Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/meilleursagents/1c01fcc1-6182-417e-a816-efac0b560bb3'>MeilleursAgents - Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>13 juil. 2019 ... Pour ce faire, vous utiliserez des techniques avanc?es d'intelligence artificielle (
 TAL, Machine Learning, mod?lisation spatio-temporelle) qui seront mises en?...</p>
@@ -463,17 +467,13 @@ published: 04.04.2019). Apply now or check the other available jobs.</p>
 <p>2 days ago ... WE ARE LOOKING FOR A NEW COLLEAGUE: Content Developer. YOU AND 
 YOUR TEAM. The successful candidate will join the team responsible for the?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oOMAafw4&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nrKgPKwv'>Guidewire Software, Inc. Careers - Senior Data Engineer, Cyber Risk Analytics - San Mateo, CA</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oOMAafw4&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nrKgPKwv'>Guidewire Software, Inc. Careers - Senior Data Engineer, Cyber Risk Analytics - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=okpI9fwk&__jvst=Employee&__jvsd=sPcd2gw1&__jvsc=Twitter&bid=nexgPKw5'>Schneider Electric NAM Careers - NAM Enterprise IT Data Services - Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-20</p>
-<hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/dZ5uI8fZ7Q/Data-Engineer'>Data Engineer - Latitude, Inc. - Career Page</a></h5> 
-<p><span class="badge badge-light">Tampa, FL</span></p>
-<p>Posted on: 2019-07-20</p>
 <hr/>
 
 
